<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_gradient"
    tools:context=".Registration">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:layout_gravity="center"
        android:textSize="36sp"
        android:textColor="@color/Neon_Green"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textSize="25sp"
        android:background="@drawable/background_rounded_corners"
        android:backgroundTint="@color/Ivory"
        android:inputType="text"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:textColor="@color/Blue"/>
    <EditText
        android:id="@+id/et_emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:textSize="25sp"
        android:background="@drawable/background_rounded_corners"
        android:backgroundTint="@color/Ivory"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:textColor="@color/Blue"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="25sp"
        android:inputType="textPassword"
        android:background="@drawable/background_rounded_corners"
        android:backgroundTint="@color/Ivory"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:textColor="@color/Blue"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/Neon_Green"
        android:padding="10dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/Ivory"
        android:textSize="25sp" />

</LinearLayout>