<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingHorizontal="50sp"
        android:text="@string/quiz_tournaments"
        android:textAlignment="center"
        android:textColor="@color/Neon_Green"
        android:textSize="36sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btn_ongoing"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:text="@string/ongoing"
            android:textSize="25sp"
            android:background="@drawable/background_rounded_corners"
            android:backgroundTint="@color/Ivory"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/Blue"/>
        <TextView
            android:id="@+id/btn_upcoming"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:text="@string/upcoming"
            android:textSize="25sp"
            android:background="@drawable/background_rounded_corners"
            android:backgroundTint="@color/Ivory"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/Blue"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btn_past"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:text="@string/past"
            android:textSize="25sp"
            android:background="@drawable/background_rounded_corners"
            android:backgroundTint="@color/Ivory"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/Blue"/>
        <TextView
            android:id="@+id/btn_participated"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:text="@string/participated"
            android:textSize="25sp"
            android:background="@drawable/background_rounded_corners"
            android:backgroundTint="@color/Ivory"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:textColor="@color/Blue"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btn_allQuizes"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:text="@string/all_quizzes"
            android:textSize="25sp"
            android:background="@drawable/background_rounded_corners"
            android:backgroundTint="@color/Ivory"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/Blue"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/btn_createQuiz"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:text="@string/create_quiz"
            android:textSize="25sp"
            android:background="@drawable/background_rounded_corners"
            android:backgroundTint="@color/Ivory"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/Blue"
            android:visibility="gone"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_registerAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/Neon_Green"
        android:padding="10dp"
        android:text="@string/register_admin_user"
        android:textAllCaps="false"
        android:textColor="@color/Ivory"
        android:textSize="25sp"
        android:visibility="gone"/>
    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/Neon_Green"
        android:padding="10dp"

        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/Ivory"
        android:textSize="25sp" />
</LinearLayout>