<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_quizList"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginBottom="20dp"
    android:elevation="15dp"
    app:cardCornerRadius="10dp"
    android:background="@color/Ivory">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">
    <ImageView
        android:id="@+id/img_optionsMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_more_vert_24"
        android:layout_gravity="end"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_name"
        android:textSize="18sp"
        android:textColor="@color/Blue"
        android:gravity="start"/>
        <TextView
            android:id="@+id/db_quizName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/Blue"
            android:gravity="start"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date_"
        android:textSize="18sp"
        android:textColor="@color/Blue"
        android:gravity="start"/>
    <TextView
        android:id="@+id/db_startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/Blue"
        android:gravity="start"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date_"
        android:textSize="18sp"
        android:textColor="@color/Blue"
        android:gravity="start"/>
    <TextView
        android:id="@+id/db_endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/Blue"
        android:gravity="start"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="18sp"
        android:textColor="@color/Blue"
        android:gravity="start"/>
    <TextView
        android:id="@+id/db_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/Blue"
        android:gravity="start"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        android:textSize="18sp"
        android:textColor="@color/Blue"
        android:gravity="start"/>
    <TextView
        android:id="@+id/db_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/Blue"
        android:gravity="start"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_takeQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/Neon_Green"
        android:padding="10dp"
        android:text="Take Quiz"
        android:textAllCaps="false"
        android:textColor="@color/Ivory"
        android:textSize="25sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_quizScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_score"
                android:textSize="18sp"
                android:textColor="@color/Blue"
                android:gravity="start"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/db_quizScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/Blue"
                android:gravity="start"
                android:visibility="gone"/>
        </LinearLayout>
</LinearLayout>

</androidx.cardview.widget.CardView>